--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gdcnb/node-auto-profiler.git"
+  },
+  "author": "gdcnb",
+  "license": "ISC",
+  "dependencies": {
+    "usage": "^0.7.1",
+    "v8-profiler": "^5.6.0"
+  }
 }
